--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "16.8.4",
     "@types/uuid": "^8.3.0",
     "axios": "^0.19.2",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.0.1",
